--- a/css/ödev1/style.css
+++ b/css/ödev1/style.css
@@ -1,4 +1,4 @@
-body{background-color:#D7A86E;color: #8E3200;font-family: 'Kanit', sans-serif;margin-left: 50px;margin-top: 50px;}
+body{background-color:#D7A86E;color: #553626;font-family: 'Kanit', sans-serif;margin-left: 50px;margin-top: 50px;}
 h1{color: #8E3200}
 h2{color: #8E3200}
 a{color:inherit; text-decoration:none}
