--- a/bootstrap/ödev3/css/style.css
+++ b/bootstrap/ödev3/css/style.css
@@ -3,6 +3,7 @@
   background-color: white;
 }
 
+
 .navcontent{
   align-items: center;
   display: flex;
@@ -133,4 +134,14 @@ button.ref:hover {
   font-weight: bold;
   font-size: 14px;
   margin-left: 8px;
+}
+
+.profilepic{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 2px solid white;
+  overflow: hidden;
+
 }
